# PointCloudRecognition

./: .gitignore  CMakeLists.txt  CMakeSettings.json  camera.h  kdTree.h  main.cpp  pc_struct.h  scene.h  userEventHandler.h
data_parser/: CMakeLists.txt  main.cpp
data_parser/Header/: base_parser.h  kitti_parser.h
description/: CMakeLists.txt  feature.h  harris.h  normalsEstimation.h  trajkovic.h
kdTree/: CMakeLists.txt  kdTree.h  main.cpp
logger/: CMakeLists.txt  logger.h  main.cpp
